# warp

./: CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  WARP.md  implementation_summary.md  pr-metadata.json  pr_description.md
.github/workflows/: ci.yml  create_release.yml
app/: Cargo.toml
app/src/: agent_resume.rs  app_state.rs  features.rs  lib.rs  modal.rs  profiling.rs  tracing.rs
app/src/ai/: agent_conversations_model.rs  agent_conversations_model_tests.rs  conversation_details_panel.rs  conversation_details_panel_tests.rs  custom_auto_models.rs  llms.rs  llms_tests.rs  mod.rs  request_usage_model.rs
app/src/auth/: auth_manager.rs
app/src/code/: view.rs
app/src/launch_configs/: launch_config_tests.rs
crates/local_control/: Cargo.toml
crates/local_control/src/: auth.rs  auth_tests.rs  catalog.rs  client.rs  discovery.rs  lib.rs  protocol.rs  protocol_tests.rs  scripting.rs  scripting_tests.rs  selection.rs  selectors.rs
crates/warp_cli/: Cargo.toml
crates/warpui_core/: Cargo.toml
crates/warpui_tui/: Cargo.toml
crates/warpui_tui/examples/: repo_metadata_probe.rs
crates/warpui_tui/examples/repo_explorer/: main.rs  view.rs
crates/warpui_tui/tests/: repo_explorer_integration.rs
script/linux/: bundle  bundle_install
script/macos/: bundle
specs/APP-2527/: PRODUCT.md
specs/byok-byoe-enterprise/: PRODUCT.md
specs/core-tui-model/: TECH.md
specs/jupyter-notebook-rendering/: PRODUCT.md  TECH.md
specs/warp-control-cli/: PRODUCT.md  README.md  SECURITY.md  TECH.md
specs/warp-tour-runner/: PRODUCT.md  TECH.md
tools/agent-resume/: README.md  build-app.sh  claude-session-start.sh  claude.zsh  codex-session-end.sh  codex-session-start.sh  config.toml.snippet  install.sh  warp-agent-resume
(+276 files in other folders)
